# GroqAPI

./: README.md
gapi/example_helpers/: helpers.py
gapi/nn/: README.md  matmul_fp16_compile.py  syrk.py
gapi/notebooks/: lstm.ipynb
gapi/tensor/: buffered_scopes_example.py  matmul_i8.py  mem_constraints_example.py
gapi/tutorials/: 4_matmul.ipynb  5_multi_matmul.ipynb  6_linear.ipynb  8_multichip.ipynb
runtime_api/: CMakeLists.txt  Device.cpp  Device.hpp  Driver.cpp  Driver.hpp  IOP.cpp  IOP.hpp  Misc.cpp  Misc.hpp  README  README.md  SimpleRunner.cpp  SimpleRunner.hpp  matmul_example.cpp  mm_int8_100by1000_x_400by1000.iop
